--- a/demo/index.html
+++ b/demo/index.html
@@ -16,11 +16,11 @@ button {
 }
 
   </style>
-  <script src="app.js" type="module"></script>
+  <script src="shactions.js" type="module"></script>
 </head>
 <body>
 
-  <ul id="lights"></ul>
+  <ul id="devices"></ul>
 
 </body>
 </html>
